# j16z

./: .gitignore  AGENTS.md  CLAUDE.md  UAT-PHASE4.md  biome.jsonc  docker-compose.test.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.claude/: gsd-file-manifest.json
.claude/commands/: diagrams.md
.planning/: HANDOFF.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TECH_DEBT.md  v1.0-MILESTONE-AUDIT.md
apps/api/: .env.example  (+5 more)
apps/langextract/: .gitignore  AGENTS.md  db.py  package.json  pyproject.toml  requirements.txt  worker.py
apps/langextract/examples/: eightk_examples.jsonl  s4_examples.jsonl  thirteend_examples.jsonl
apps/langextract/pipelines/: __init__.py  eightk.py  s4_defm14a.py  thirteend_g.py
apps/langextract/scoring/: __init__.py  materiality.py
apps/langextract/summaries/: __init__.py  analyst_summary.py
apps/langextract/tests/: conftest.py  test_eightk_pipeline.py  test_integration.py  test_materiality.py  test_regression.py  test_s4_pipeline.py  test_summaries.py  test_thirteend_pipeline.py  test_worker.py
apps/langextract/tests/fixtures/: discover_capital_one_8k.txt  masterbrand_amwd_s4_excerpt.txt
j16z-docs/: API.md  DATA_SOURCE_MAPPING.md  Davidpainpoints.md  Design2.md  MVP.md  PitchDeck0.md  RESEARCH.md  Random.md  Rehaul.md  RehaulVisual.md  RiskMitigation.md  USP.md  coderabbit-review-20251224-153933.md  future.md  j16z_Professional_Pitch.pptx  marketing-stack.md  template-content.md
openspec/: project.md
scripts/: test-e2e.sh
supabase/: config.toml
(+350 files in other folders)
